Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Zope X3.0.1

    Bug Fixes

      - Fixed issue 293 (sequence widget).

      - Backported several bug fixes made to the DSN parser, including issue
        304.
      
      - Contents/contents.pt didn't quote the values that were used in
        href:s, thus it couldn't function properly if the items contained
        certain characters.

      - If the content-type was text/*, HTTPResponse.write re-set the
        content-length header to the first chunk of data.

      - Don't unconditionally add Content-Length header in
        HTTPResponse.getHeaders(). Do it only in output(), where the
        size of the data is known.

      - For ``for`` parameter of the <browser:menuItem> and
        <browser:menuItems> directives was not marked as required in
        the directive schema, while it actually was expected to be
        required.

    Much thanks to everyone who contributed to this release:

      Jim Fulton, Stephan Richter, Bjorn Tillenius,
      Philipp von Weitershausen

      Note: If you are not listed and contributed, please add yourself. This
      note will be deleted before the release.

  ------------------------------------------------------------------

  Zope X3.0.0

    New features

      - Implemented rdb:gadflyRoot directive.    

      - Schemas are now copied before they are appended to content type or
        instance. This should probably become a policy later.

    Bug Fixes

      - Fixed issue 228.

      - TextWidgets set the value attribute to "value" when the field
        has a missing value set and was not required and when there
        was no input.

      - Fixed a bug in the adapter registry that would prevent `dict`-derived
        utilites from being retrieved correctly.
