@@ -24,6 +24,8 @@ try:
 except ImportError:
     locale = None
 
+import platform
+
 from zope.app.applicationcontrol.interfaces import \
      IRuntimeInfo, IApplicationControl, IZopeVersion
 from zope.component import getUtility, ComponentLookupError
@@ -71,12 +73,15 @@ class RuntimeInfo(object):
 
     def getSystemPlatform(self):
         """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
-        # FIXME: platform.platform()?
-        if hasattr(os, "uname"):
-            info = os.uname()
-        else:
-            info = (sys.platform,)
-        return unicode(" ".join(info), self.getPreferredEncoding())
+        info = []
+        enc = self.getPreferredEncoding()
+        for item in platform.uname():
+            try:
+                t = unicode(item, enc)
+            except ValueError:
+                continue
+            info.append(t)
+        return u" ".join(info)
 
     def getCommandLine(self):
         """See zope.app.applicationcontrol.interfaces.IRuntimeInfo"""
