@@ -10,11 +10,13 @@ Zope Changes
 
     Bug Fixes
 
+      - Fixed issue 334 (Failing RuntimeInfo tests).
+
       - Fixed issue 293 (sequence widget).
 
       - Backported several bug fixes made to the DSN parser, including issue
         304.
-      
+
       - Contents/contents.pt didn't quote the values that were used in
         href:s, thus it couldn't function properly if the items contained
         certain characters.
@@ -34,7 +36,7 @@ Zope Changes
     Much thanks to everyone who contributed to this release:
 
       Jim Fulton, Stephan Richter, Bjorn Tillenius,
-      Philipp von Weitershausen
+      Philipp von Weitershausen, Dmitry Vasiliev
 
       Note: If you are not listed and contributed, please add yourself. This
       note will be deleted before the release.
